syntax = "proto3";

package v1;

option go_package = "./v1";

service CurrencyConversionService {
    rpc ConvertCurrency(ConvertCurrencyRequest) returns (ConvertCurrencyResponse);
}

message ConvertCurrencyRequest {
    double amount = 1;
    string code = 2;
}

message ConvertCurrencyResponse {
    map<string, double> values = 1;
}
